--- a/sidney-agbonkhese-coffeeshop/css/landing.css
+++ b/sidney-agbonkhese-coffeeshop/css/landing.css
@@ -4,78 +4,6 @@
   background-position: center;
   background-size: cover;
 }
-
-.coffee {
-  background: #fff0ed;
-  width: 100%;
-  background-position: center;
-  background-size: cover;
-}
-
-.view-btn{
-    margin-left: 40%;
-}
-.prod-sect{
-    margin-left: 2%;
-    margin-right: 2%;
-}
-
-.prod-sect__title{
-    text-align: center;
-}
-
-.coffee--text {
-  display: inline-block;
-  width: 60%;
-  margin-top: 0;
-}
-.coffee--text-sect {
-  display: inline-block;
-}
-.coffee--head-body{
-    width: 40%;
-    vertical-align: top;
-    display: inline-block;
-    margin-left: 5%;
-    margin-top: 10%;
-}
-.coffee--img {
-  display: inline-block;
-  padding-left: 20%;
-}
-.coffee--header {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.prod-cards__coffee-images {
-  height: 280px;
-}
-
-.prod-cards__price {
-  color: #5bacc3;
-}
-
-.discount-sect {
-  background: #393939;
-  color: #f7f7f7;
-  width: 90%;
-  text-align: center;
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
-.footer-sect {
-  background: #fff0ed;
-  width: 100%;
-  background-position: center;
-  background-size: cover;
-}
-
-.footer-group{
-    margin-left: 18%;
-    margin-right: 5%;
-}
 .nav-area__bean-logo {
   width: 50px;
   display: inline-block;
@@ -84,14 +12,6 @@
 .nav-area__bean-logo--link {
   text-decoration: none;
 }
-
-.discount-sect__text {
-  font-size: 45px;
-  font-weight: 400;
-  font-style: bold;
-  margin: 4rem;
-}
-
 .nav-area__nitro-title {
   color: black;
   text-decoration: none;
@@ -110,6 +30,7 @@
 
 .nav-area__list-links {
   text-decoration: none;
+  font-size: 21px;
   color: black;
 }
 
@@ -121,6 +42,45 @@
   display: inline;
 }
 
+.coffee {
+  background: #fff0ed;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+}
+.coffee__text {
+  display: inline-block;
+  width: 60%;
+  margin-top: 0;
+}
+.coffee__text-sect {
+  display: inline-block;
+}
+.coffee__head-body {
+  width: 40%;
+  vertical-align: top;
+  display: inline-block;
+  margin-left: 5%;
+  margin-top: 10%;
+}
+.coffee__img {
+  display: inline-block;
+  padding-left: 20%;
+}
+.coffee__header {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.view-btn {
+  margin-left: 40%;
+  margin-right: 40%;
+  margin-top: 5%;
+}
+.prod-sect {
+  margin-left: 2%;
+  margin-right: 2%;
+}
 .prod-cards {
   display: inline-block;
   border-radius: 10px;
@@ -138,39 +98,73 @@
   width: 180px;
   padding: 20px;
 }
-.address {
+.prod-sect__title {
+  text-align: center;
+}
+
+.prod-cards__coffee-images {
+  height: 280px;
+}
+
+.prod-cards__price {
+  color: #5bacc3;
+}
+.discount-sect {
+  background: #393939;
+  color: #f7f7f7;
+  width: 90%;
+  text-align: center;
+  margin: 7%;
+}
+.discount-sect__text {
+  font-size: 45px;
+  font-weight: 400;
+  font-style: bold;
+  margin: 4rem;
+}
+.footer-sect {
+  background: #fff0ed;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+}
+
+.footer-group {
+  margin-left: 18%;
+  margin-right: 5%;
+}
+.footer-group__addr {
   display: inline-block;
   margin-right: 2rem;
   box-sizing: border-box;
   width: 19rem;
 }
 
-.address__text {
+.footer-group__addr--text {
   margin-top: 0;
   margin-bottom: 0;
 }
-.hours {
+.footer-group__hrs {
   display: inline-block;
   margin-right: 2rem;
   box-sizing: border-box;
   width: 19rem;
 }
-.hours__text {
+.footer-group__hrs--text {
   margin-top: 0;
   margin-bottom: 0;
 }
-.social-sect {
+.footer-group__social {
   display: inline-block;
   margin-right: 2rem;
   box-sizing: border-box;
   width: 19rem;
-
 }
-.social-sect__link {
-    text-decoration: none;
-  }
-.social-sect__img{
-    width: 50px;
+.footer-group__social--link {
+  text-decoration: none;
+}
+.footer-group__social--img {
+  width: 50px;
 }
 button {
   color: #f7f7f7;
