--- a/sidney-agbonkhese-coffeeshop/css/menu.css
+++ b/sidney-agbonkhese-coffeeshop/css/menu.css
@@ -1,24 +1,74 @@
+.nav-area {
+    background: #fff0ed;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+  .nav-area__bean-logo {
+    width: 50px;
+    display: inline-block;
+  }
+  
+  .nav-area__bean-logo--link {
+    text-decoration: none;
+  }
+  .nav-area__nitro-title {
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  .nav-area__menu-list {
+    list-style-type: none;
+    display: inline;
+  }
+  
+  .nav-area__list-items {
+    display: inline-block;
+    margin: 20px;
+  }
+  
+  .nav-area__list-links {
+    text-decoration: none;
+    font-size: 21px;
+    color: black;
+  }
+  
+  .nav-area__list-link--colour {
+    color: #5bacc3;
+  }
+  
+  .nav-area__header {
+    display: inline;
+  }  
+
 .hot-drinks{
     background: #FFF0ED;
     width: 100%;
     background-position: center;
     background-size: cover;
 }
-
+.hot-drinks__title{
+    margin-top: 0;
+}
 .cold-drinks{
     background: #F7F7F7;
     width: 100%;  
     background-position: center;
     background-size: cover;
 }
-
+.cold-drinks__title{
+    margin-top: 0;
+}
 .pastries{
     background: #FFF0ED;
     width: 100%;
     background-position: center;
     background-size: cover;
 }
-
+.pastries__title{
+    margin-top: 0;
+}
 .menu-sect{
     background-image: url('../assets/coffee-circle.jpg');
     width: 100%; 
@@ -27,48 +77,65 @@
     background-size: cover;
     
 }
-.menu-box{
+.menu-sect__header{
     background: #393939;
     color: #F7F7F7;
     width: 300px;
-    height: 200px;  
+    height: 200px; 
+    margin-top: 0; 
+    text-align: center;
+    margin-left: 40%;
+    margin-right: 40%;
 }
 
 .menu{
     background: #393939;
     list-style-type: none;
+    padding-top: 40px;
     width: 100%;
+    height: 80px;
 }
 
-.menu-list{
+.menu__list{
     list-style-type: none;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+    width: 100%;
+    height: 80px;
 }
 
 .header-list{
     list-style-type: none;
 }
 
-.nitro-title{
-    color: black;
-    text-decoration: none;
-}
 
-.menu-text{
+.menu__list-item--text{
     color: #F7F7F7;
     text-decoration: none;
+    border-left: 4px solid #5BACC3;
+    padding-left: 2%;
+    padding-right: 2%;
+    display: inline;
+    
 }
-
+.menu__list-item{
+    display: inline;
+}
 
 .price{
     text-align: center;
     color: #5BACC3;
+    margin-bottom: 0;
 }
 
 .description{
     display: inline-block;
     max-width: 40%;
     font-style: italic;
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
 h1, h2{
