changed absolute values to relative ones

--- a/sidney-agbonkhese-coffeeshop/css/landing.css
+++ b/sidney-agbonkhese-coffeeshop/css/landing.css
@@ -5,7 +5,7 @@
   background-size: cover;
 }
 .nav-area__bean-logo {
-  width: 50px;
+  width: 3rem;
   display: inline-block;
 }
 
@@ -25,12 +25,12 @@
 
 .nav-area__list-items {
   display: inline-block;
-  margin: 20px;
+  margin: 1.25rem;
 }
 
 .nav-area__list-links {
   text-decoration: none;
-  font-size: 21px;
+  font-size: 1.3rem;
   color: black;
 }
 
@@ -83,27 +83,27 @@
 }
 .prod-cards {
   display: inline-block;
-  border-radius: 10px;
-  width: 330px;
-  height: 440px;
-  padding: 20px;
-  box-shadow: 0 5px 9px -1px;
+  border-radius: 0.7rem;
+  width: 21rem;
+  height: 27.5rem;
+  padding: 1.25rem;
+  box-shadow: 0 0.3rem 0.6rem -0.06rem;
   box-shadow: rgba(0, 0, 0, 25);
   text-align: center;
-  margin: 20px;
+  margin: 1.25rem;
 }
 .prod-cards__view-btn {
   display: block;
-  margin-top: 20px;
-  width: 180px;
-  padding: 20px;
+  margin-top: 1.25rem;
+  width: 11.25rem;
+  padding: 1.25rem;
 }
 .prod-sect__title {
   text-align: center;
 }
 
 .prod-cards__coffee-images {
-  height: 280px;
+  height: 17.5rem;
 }
 
 .prod-cards__price {
@@ -117,7 +117,7 @@
   margin: 7%;
 }
 .discount-sect__text {
-  font-size: 45px;
+  font-size: 2.8rem;
   font-weight: 400;
   font-style: bold;
   margin: 4rem;
@@ -164,26 +164,26 @@
   text-decoration: none;
 }
 .footer-group__social--img {
-  width: 50px;
+  width: 3.125rem;
 }
 button {
   color: #f7f7f7;
   background-color: #5bacc3;
   border: none;
-  width: 180px;
-  padding: 20px;
+  width: 11.25rem;
+  padding: 1.25rem;
 }
 
 h1,
 h2 {
-  font-size: 60px;
+  font-size: 3.75rem;
   font-weight: 300;
 }
 p {
-  font-size: 18px;
+  font-size: 1.13rem;
 }
 
 h3 {
-  font-size: 33px;
+  font-size: 2.1rem;
   font-weight: 300;
 }
