made changes to the component cards

--- a/sidney-agbonkhese-coffeeshop/css/landing.css
+++ b/sidney-agbonkhese-coffeeshop/css/landing.css
@@ -81,12 +81,16 @@
   margin-left: 2%;
   margin-right: 2%;
 }
+.cards{
+  display: flex;
+}
 .prod-cards {
   display: inline-block;
   border-radius: 0.7rem;
   width: 21rem;
   height: 27.5rem;
-  padding: 1.25rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
   box-shadow: 0 0.3rem 0.6rem -0.06rem;
   box-shadow: rgba(0, 0, 0, 25);
   text-align: center;
@@ -98,16 +102,43 @@
   width: 11.25rem;
   padding: 1.25rem;
 }
+.prod-cards__text-sect{
+  background-color: #fff0ed;
+  border-radius: 0.7rem;
+  display: flex;
+  height: 11rem;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-left: 1.2rem;
+}
+.prod-cards__text-sect--sub-text{
+  color: #909090;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+.prod-cards__text-sect--header{
+  margin-bottom: 0;
+}
 .prod-sect__title {
   text-align: center;
 }
-
+.prod-cards__subsect{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.flex-container{
+  display: flex;
+}
 .prod-cards__coffee-images {
   height: 17.5rem;
 }
 
 .prod-cards__price {
   color: #5bacc3;
+  margin-right: 1.2rem;
+  margin-top: 2.1rem;
+  padding-top:1.2rem;
 }
 .discount-sect {
   background: #393939;
@@ -132,6 +163,7 @@
 .footer-group {
   margin-left: 18%;
   margin-right: 5%;
+  padding-bottom: 3rem;
 }
 .footer-group__addr {
   display: inline-block;
