--- a/sidney-agbonkhese-coffeeshop/scss/menu.scss
+++ b/sidney-agbonkhese-coffeeshop/scss/menu.scss
@@ -1,3 +1,4 @@
+@use './partials/global' as *;
 .nav-area {
     background: #fff0ed;
     width: 100%;
@@ -73,9 +74,14 @@
     background-image: url('../assets/coffee-circle.jpg');
     width: 100%; 
     height: 43.75rem;  
+    display: flex;
+    justify-content: center;
     background-position: center;
     background-size: cover;
-    
+}
+#menu-coffee-border{
+    width: 300px;
+    height: 200px;
 }
 .menu-sect__header{
     background: #393939;
@@ -84,8 +90,14 @@
     height: 12.5rem; 
     margin-top: 0; 
     text-align: center;
-    margin-left: 40%;
-    margin-right: 40%;
+    position: relative;
+    top: 5px;
+    left: 5px;
+    z-index: -1;
+}
+.menu-sect__header-sect{
+    position: relative;
+    z-index: 4;
 }
 
 .menu{
