--- a/sidney-agbonkhese-coffeeshop/scss/landing.css
+++ b/sidney-agbonkhese-coffeeshop/scss/landing.css
@@ -5,6 +5,7 @@
   width: 400px;
   height: auto;
   position: relative;
+  z-index: 1;
 }
 
 .nav-area {
@@ -70,6 +71,10 @@ button {
   border: none;
 }
 
+button:active {
+  background-color: red;
+}
+
 h1,
 h2 {
   font-size: 3.75rem;
@@ -86,6 +91,14 @@ h3 {
   margin-bottom: 0;
 }
 
+@keyframes rotationFunc {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .coffee {
   background: #fff0ed;
   width: 100%;
@@ -266,6 +279,10 @@ h3 {
   padding: 1.25rem;
 }
 
+.prod-cards__view-btn:active {
+  background-color: brown;
+}
+
 .coffee-images {
   height: 17.5rem;
 }
@@ -274,6 +291,10 @@ h3 {
   position: absolute;
   right: 25%;
   top: 20%;
+}
+
+.coffee-images--mod:hover {
+  animation: rotationFunc 2s infinite;
 }
 
 .coffee-images--border {
